--- a/generator/services/Angular-Template-managerV12/templates/AppComponentTs.handlebars
+++ b/generator/services/Angular-Template-managerV12/templates/AppComponentTs.handlebars
@@ -7,7 +7,7 @@ import { Router, NavigationEnd } from '@angular/router';
   styleUrls: ['./app.component.scss']
 })
 export class AppComponent implements OnInit {
-  headerFooter: boolean;
+  headerFooter: boolean=false;
 
   constructor(
     private router: Router
