--- a/generator/services/React-Template-managerV17/templates/AppComponentTs.handlebars
+++ b/generator/services/React-Template-managerV17/templates/AppComponentTs.handlebars
@@ -1,24 +1,26 @@
-import { Component, OnInit } from '@angular/core';
-import { Router, NavigationEnd } from '@angular/router';
+import React from "react";
+import "./App.scss";
+import { BrowserRouter, Route, Switch, Redirect } from "react-router-dom";
+import UserLayout from "./Layout/UserLayout/UserLayout";
+import AuthLayout from "./Layout/AuthLayout/AuthLayout";
 
-@Component({
-  selector: 'app-root',
-  templateUrl: './app.component.html',
-  styleUrls: ['./app.component.scss']
-})
-export class AppComponent implements OnInit {
-  headerFooter: boolean;
-
-  constructor(
-    private router: Router
-  ) { }
-  ngOnInit() {
-    this.router.events
-      .subscribe((event) => {
-        if (event instanceof NavigationEnd) {
-          const temp = event.url.split('?');
-          this.headerFooter = (temp[0] !== '/signup' && temp[0] !== '/login');
-        }
-      });
-  }
-}
+const App = () => {
+  return (
+    <>
+      <BrowserRouter>
+        <Switch>
+          <Route
+            path="/user"
+            render={(props: any) => <UserLayout {...props} />}
+          />
+          <Route
+            path="/auth"
+            render={(props: any) => <AuthLayout {...props} />}
+          />
+          <Redirect from="/" to="/auth/login" />
+        </Switch>
+      </BrowserRouter>
+    </>
+  );
+};
+export default App;
