--- a/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.scss
+++ b/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.scss
@@ -6,3 +6,17 @@
     right: 0;
     bottom: 100px;
 }
+
+#fields_heading {
+    font-size: 20px;
+    font-family: Montserrat, sans-serif;
+    font-weight: 700;
+    margin: 5px 0 5px 0;
+    color: #302C5E;
+    white-space: nowrap;
+}
+
+#dropdown_style {
+    height: 50px;
+    border-color: black
+}
