updating react tempate code

--- a/generator/services/React-Template-managerV17/templates/AppRoutingModule.handlebars
+++ b/generator/services/React-Template-managerV17/templates/AppRoutingModule.handlebars
@@ -8,7 +8,11 @@ var routes: any = [
         path: "{{path}}",
         name: "{{component}}",
         component: {{component}},
-        layout: "/auth",
+        {{#if isAuthImport }} 
+            layout: "/auth",
+        {{else}}
+            layout: "/user",
+        {{/if}}
     },
   {{/each}}
 ]
