react-template condition to routing

--- a/generator/services/React-Template-managerV17/templates/AppComponentTs.handlebars
+++ b/generator/services/React-Template-managerV17/templates/AppComponentTs.handlebars
@@ -1,26 +1,18 @@
 import React from "react";
 import "./App.scss";
 import { BrowserRouter, Route, Switch, Redirect } from "react-router-dom";
-import UserLayout from "./Layout/UserLayout/UserLayout";
-import AuthLayout from "./Layout/AuthLayout/AuthLayout";
+import Routes from "./routes";
 
-const App = () => {
+const App = () => { 
+
   return (
-    <>
+    
       <BrowserRouter>
         <Switch>
-          <Route
-            path="/user"
-            render={(props: any) => <UserLayout {...props} />}
-          />
-          <Route
-            path="/auth"
-            render={(props: any) => <AuthLayout {...props} />}
-          />
-          <Redirect from="/" to="/auth/login" />
+          <Route component={Routes} />
         </Switch>
       </BrowserRouter>
-    </>
+      
   );
 };
 export default App;
