--- a/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.html
+++ b/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.html
@@ -57,3 +57,43 @@
         </div>
     </div>
 </div>
+<!-- events action popup model -->
+<div id="EventPopup" class="modal" tabindex="-1" role="dialog" style="display: none">
+    <div class="modal-dialog modal-lg" role="dialog">
+        <div class="modal-content">
+            <div class="modal-header" style="display: block;">
+                <button type="button" class="btn-close pull-right" aria-label="Close"></button>
+                <h3 id="fields_heading">Choose an Flow</h3>
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row" *ngIf="selectedFlowObj && selectedFlowObj.length > 0">
+                        <div class="col-md-6 col-sm-8 col-xs-6">
+                            <b>Selected Flow Action</b>: &nbsp;&nbsp; {{selectedFlowObj[0].actionOnData}}
+                        </div>
+                        <br>
+                    </div>
+                    <!-- <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham"
+              [columnDefs]="columnDefs" [rowSelection]="rowSelection" [rowData]="rowData" [animateRows]="true"
+              [defaultColDef]="defaultColDef" domLayout='autoHeight' [pagination]="true" [paginationPageSize]="10"
+              [floatingFilter]="true" (selectionChanged)="onSelectionChanged($event)" (gridReady)="onGridReady($event)">
+            </ag-grid-angular> -->
+
+                    <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-material" [columnDefs]="this.Aggrid.columnDefs" [rowData]="rowData" [animateRows]="true" [defaultColDef]="this.Aggrid.defaultColDef" domLayout='autoHeight' [pagination]="true"
+                        [paginationPageSize]="10" [suppressRowClickSelection]="true" (selectionChanged)="onSelectionChanged($event)" [rowSelection]="this.Aggrid.rowSelection" [floatingFilter]="true" (gridReady)="onGridReady($event)">
+                    </ag-grid-angular>
+                </div>
+            </div>
+            <div class="row">
+                <div class="d-flex justify-content-center">
+                    <div class="p-2">
+                        <button id="create_btn" class="btn btn-default">Ok</button>
+                    </div>
+                    <div class="p-2">
+                        <button id="cancel_btn" type="button" class="btn btn-default">Cancel</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
