--- a/generator/services/React-Template-managerV17/templates/AppRoutingModule.handlebars
+++ b/generator/services/React-Template-managerV17/templates/AppRoutingModule.handlebars
@@ -1,12 +1,14 @@
 {{#each importComponent}}
 import {{classname}} from "./Components/{{classname}}/{{classname}}";
 {{/each}}
+import React from 'react';
+import { Route, Switch } from 'react-router-dom';
 
 const Routes = () => {
     return (
       <Switch>
         {{#each componentPath}}
-          <Route exact path="{{path}}", component: {{component}} />
+          <Route exact path="{{path}}", component={{component}} />
         {{/each}}
       </Switch>
     )
