--- a/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.html
+++ b/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.html
@@ -62,7 +62,7 @@
     <div class="modal-dialog modal-lg" role="dialog">
         <div class="modal-content">
             <div class="modal-header" style="display: block;">
-                <button type="button" class="btn-close pull-right" aria-label="Close"></button>
+                <button type="button" class="btn-close pull-right" (click)="closeEventPopup()" aria-label="Close"></button>
                 <h3 id="fields_heading">Choose an Flow</h3>
             </div>
             <div class="modal-body">
@@ -79,18 +79,18 @@
               [floatingFilter]="true" (selectionChanged)="onSelectionChanged($event)" (gridReady)="onGridReady($event)">
             </ag-grid-angular> -->
 
-                    <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-material" [columnDefs]="this.Aggrid.columnDefs" [rowData]="rowData" [animateRows]="true" [defaultColDef]="this.Aggrid.defaultColDef" domLayout='autoHeight' [pagination]="true"
-                        [paginationPageSize]="10" [suppressRowClickSelection]="true" (selectionChanged)="onSelectionChanged($event)" [rowSelection]="this.Aggrid.rowSelection" [floatingFilter]="true" (gridReady)="onGridReady($event)">
+                    <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-material" [columnDefs]="columnDefs" [rowData]="rowData" [animateRows]="true" [defaultColDef]="defaultColDef" domLayout='autoHeight' [pagination]="true" [paginationPageSize]="10"
+                        [suppressRowClickSelection]="true" (selectionChanged)="onSelectionChanged($event)" [rowSelection]="rowSelection" [floatingFilter]="true" (gridReady)="onGridReady($event)">
                     </ag-grid-angular>
                 </div>
             </div>
             <div class="row">
                 <div class="d-flex justify-content-center">
                     <div class="p-2">
-                        <button id="create_btn" class="btn btn-default">Ok</button>
+                        <button id="create_btn" class="btn btn-default" (click)="saveEvent()">Ok</button>
                     </div>
                     <div class="p-2">
-                        <button id="cancel_btn" type="button" class="btn btn-default">Cancel</button>
+                        <button id="cancel_btn" type="button" (click)="closeEventPopup()" class="btn btn-default">Cancel</button>
                     </div>
                 </div>
             </div>
