--- a/generator/services/React-Template-managerV17/templates/AppComponentTs.handlebars
+++ b/generator/services/React-Template-managerV17/templates/AppComponentTs.handlebars
@@ -1,15 +1,28 @@
 import React from "react";
 import "./App.scss";
 import { BrowserRouter, Route, Switch, Redirect } from "react-router-dom";
-import Routes from "./routes";
+import routes from "./routes";
 
 const App = () => { 
-
+  const getRoutes = (routes: any[]) => {
+    return routes.map((prop, key) => {
+      console.log("I am from routes----------->>>>", prop);
+      let Component = prop.component;
+        return (
+          <Route
+            exact
+            path={prop.path}
+            key={key}
+            render={(props) => <Component {...prop} {...props} />}
+          />
+        );
+    });
+  };
   return (
     
       <BrowserRouter>
         <Switch>
-          <Route component={Routes} />
+          {getRoutes(routes)}
         </Switch>
       </BrowserRouter>
       
