--- a/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.html
+++ b/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.html
@@ -123,3 +123,97 @@
         </div>
     </div>
 </div>
+
+<!-- grid popup model -->
+<div *ngIf="isGridPopup" id="agGridModal" class="modal" tabindex="-1" role="dialog" style="display: block">
+    <div class="modal-dialog modal-md" role="dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 id="fields_heading">Grid</h3>
+                <button type="button" class="btn-close pull-right" (click)="onCloseHandled()" aria-label="Close"></button>
+            </div>
+            <div class="container">
+                <form [formGroup]="agGridFields">
+                    <div class="row mt-3">
+                        <div class="col-lg-6">
+                            <label id="column_heading" for="">Column</label>
+                        </div>
+                        <div class="col-lg-6">
+                            <select name="" id="dropdown_style" formControlName="selectColumn" class="form-select" (ngModelChange)='onColumnChange($event)'>
+                                <option *ngFor="let col of columnOptions" [ngValue]="col">{{ col.name }}</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-lg-6">
+                            <label id="column_heading" for="">Fields</label>
+                        </div>
+                        <div class="col-lg-6">
+                            <select id="dropdown_style" formControlName="selectField" class="form-select" (ngModelChange)='onFieldOptions($event)'>
+                                <option *ngFor="let field of allEntityField" [value]="field.name">{{ field.name }}</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row mt-2" *ngIf="agGridArray.length > 0">
+                        <div class="col-lg-12">
+                            <button class="btn btn-outline-primary" (click)='toggleMapping()'>
+                                <span  *ngIf="!isMappingGrid; else hide">Show</span>
+                                <ng-template #hide>Hide</ng-template>
+                                Mapped Fields
+                            </button>
+                            <div [@openCloseMapping]="isMappingGrid ? 'openGrid': 'closeGrid'">
+                                <table class="table table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">#</th>
+                                            <th scope="col">columnName</th>
+                                            <th scope="col">
+                                                <div class="row">
+                                                    <div class="col-md-12">
+                                                        Entity
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-md-6">Name</div>
+                                                    <div class="col-md-6">Field</div>
+                                                </div>
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <ng-container *ngFor="let gridInfo of agGridArray; let i=index">
+                                            <tr>
+                                                <th scope="row">{{i+1}}</th>
+                                                <td>{{gridInfo.columnname}}</td>
+                                                <td>
+                                                    <div class="row">
+                                                        <div class="col-md-6">
+                                                            {{gridInfo.entity}}
+                                                        </div>
+                                                        <div class="col-md-6">
+                                                            {{gridInfo.entityfield}}
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        </ng-container>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="row">
+                <div class="d-flex justify-content-center">
+                    <div class="p-2">
+                        <button id="create_btn" class="btn btn-default" (click)="saveGridField()">Ok</button>
+                    </div>
+                    <div class="p-2">
+                        <button id="cancel_btn" type="button" class="btn btn-default" (click)="onCloseHandled()">Cancel</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
