react aggrid and dynamicdrop down

--- a/generator/services/react-gen-managerV1702/templates/ComponentHtml.handlebars
+++ b/generator/services/react-gen-managerV1702/templates/ComponentHtml.handlebars
@@ -2,7 +2,7 @@ import React from 'react';
 import "./{{screenName}}.scss";
 
 
-class {{screenName}} extends React.Component {
+class {{className}} extends React.Component<{}, any> {
     render(){
         return(
             <>
@@ -13,4 +13,4 @@ class {{screenName}} extends React.Component {
     };
 };
 
-export default {{screenName}};
+export default {{className}};
