--- a/generator/services/seffrontendmanager/templates/ComponentTs.handlebars
+++ b/generator/services/seffrontendmanager/templates/ComponentTs.handlebars
@@ -6,8 +6,11 @@ import { {{importName}} } from '{{ importPath }}';
 import * as {{importName}} from '{{ importPath }}';
 {{/each}}
 {{#ifCond GpOptions.featureName '===' 'systementry'}}
+// @ts-ignore
 import grapesjs from 'grapesjs';
+// @ts-ignore
 import * as  Highcharts from 'highcharts';
+// @ts-ignore
 import faker from 'faker';
 {{/ifCond}}
 
