--- a/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.html
+++ b/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.html
@@ -344,8 +344,6 @@
                             <label class="radio-inline"><input type="radio" value="queryParameter" [(ngModel)]="routeDetails.type"
         name="routeOption">Query Parameter</label>
                         </div>
-
-
                     </div>
                 </form>
             </div>
@@ -362,3 +360,4 @@
         </div>
     </div>
 </div>
+<!-- sample changes -->
