--- a/generator/services/Angular-gen-ManagerV13/templates/ComponentTs.handlebars
+++ b/generator/services/Angular-gen-ManagerV13/templates/ComponentTs.handlebars
@@ -43,7 +43,7 @@ export class {{ GpOptions.className }} implements OnInit {
     ngOnInit() {
         {{#if GpOptions.entities}}
         {{#each GpOptions.entities}}
-        this.{{ name }}.created_by = sessionStorage.getItem('email') || '{}'; 
+        this.{{ name }}.created_by = sessionStorage.getItem('email') || null; 
         {{/each}}
         {{/if}}
         {{#each GpCodeToAdd.flows_info }}
