--- a/generator/services/auth-gen-manager/template/gcamresources.handlebars
+++ b/generator/services/auth-gen-manager/template/gcamresources.handlebars
@@ -1,6 +1,4 @@
-gcam_resource(object) ::= <<
-
-export const resourcetypes = [
+export const resource_types = [
   {
     "resource_name": "manageroles",
     "resource_type": "screen",
@@ -43,7 +41,7 @@ export const resourcetypes = [
     "resource_name": "home",
     "resource_type": "screen",
     "roles": [
-      "user", "admin
+      "user", "admin"
     ],
     "components": [{
       "label_1425":
@@ -230,40 +228,11 @@ export const resourcetypes = [
     ]
   },
   {
-    "resource_name": "landing",
+    "resource_name": "usermanagement",
     "resource_type": "screen",
     "roles": [
-      "guest"
+      "admin"
     ],
-    "components": [
-      {
-        "login": {
-          "id": "878979",
-          "roles": [
-            "admin",
-            "user",
-            "guest"
-          ]
-        },
-        "signup": {
-          "id": "135979",
-          "roles": [
-            "admin",
-            "user",
-            "guest"
-          ]
-        },
-      }
-    ]
-  },
-  {
-    $if(object)$$object:{ value |
-    "resource_name": "$value.resources$",
-    "resource_type": "screen",
-    "roles": [
-      "admin", "$value.role$"
-    ],
-    };separator="\n"$$endif$
     "components": [{
       "label_1425":
       {
@@ -295,8 +264,63 @@ export const resourcetypes = [
       }
     }
     ]
-    },
+  },
+  {
+    "resource_name": "landing",
+    "resource_type": "screen",
+    "roles": [
+      "guest"
+    ],
+    "components": [
+      {
+        "login": {
+          "id": "878979",
+          "roles": [
+            "admin",
+            "user",
+            "guest"
+          ]
+        },
+        "signup": {
+          "id": "135979",
+          "roles": [
+            "admin",
+            "user",
+            "guest"
+          ]
+        },
+      }
+    ]
+  },
+  {{#if arrayData}}
+  {{#each arrayData}}
+  {
+    "resource_name": "{{resources}}"
+    "resource_type": "screen",
+    "roles": [
+      "admin", "{{role}}"
+    ],
+    "components": [{
+      "label_1425": {
+        "id": "878979",
+        "roles": [ "admin" ]
+      },
+      "textbox_6272": {
+        "id": "135979",
+        "roles": [ "admin" ]
+      },
+      "label_2437": {
+        "id": "343979",
+        "roles": [ "admin" ]
+      },
+      "dropdown_73821": {
+        "id": "738291",
+        "roles": [ "admin" ]
+      }
+    }]
+  },
+  {{/each}}
+  {{/if}}
+  
     
 ]
-
->>
